--- a/index.html
+++ b/index.html
@@ -1,12 +1,21 @@
+
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
     <title>Card Stuff</title>
-    <script src="js/app.js" charset="utf-8"></script>
-    <link rel="stylesheet" href="css/styles.css">
+    <!--Import Google Icon Font-->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+    <!-- Compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
+
+
+    <!--Let browser know website is optimized for mobile-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   </head>
+
   <body>
+
     <div>
       <!-- <img id="card1" src="http://placebear.com/226/314"> -->
       <form id="form" name="form">
@@ -19,5 +28,41 @@
       <h2>Deck ID:</h2>
       <div id="did"></div>
     </div>
+
+    <!--Import jQuery before materialize.js-->
+    <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <!-- Compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
+    <!-- Compiled and minified JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+
+    <!-- cards script -->
+    <script src="js/app.js" charset="utf-8"></script>
+
   </body>
 </html>
+
+
+<!-- <!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Card Stuff</title>
+    <script src="js/app.js" charset="utf-8"></script>
+    <link rel="stylesheet" href="css/styles.css">
+  </head>
+  <body>
+    <div>
+      <img id="card1" src="http://placebear.com/226/314">
+      <form id="form" name="form">
+        Num of cards to draw:<br>
+        <input type="number" min="1" max="52" name="draw-count" id="draw-count" value="2"><br>
+        <input type="submit" id="submit" value="Draw">
+      </form>
+      <h1>Cards</h1>
+      <ul id="cards"></ul>
+      <h2>Deck ID:</h2>
+      <div id="did"></div>
+    </div>
+  </body>
+</html> -->
